etc/iptables.rules
*mangle

# Classify important TCP packets as 1:10
-A POSTROUTING -o enp0s20f0 -p tcp --syn -m length --length 40:68 -j CLASSIFY --set-class 1:10
-A POSTROUTING -o enp0s20f0 -p tcp --tcp-flags ALL SYN,ACK -m length --length 40:68 -j CLASSIFY --set-class 1:10
-A POSTROUTING -o enp0s20f0 -p tcp --tcp-flags ALL ACK -m length --length 40:100 -j CLASSIFY --set-class 1:10
-A POSTROUTING -o enp0s20f0 -p tcp --tcp-flags ALL RST -j CLASSIFY --set-class 1:10
-A POSTROUTING -o enp0s20f0 -p tcp --tcp-flags ALL ACK,RST -j CLASSIFY --set-class 1:10
-A POSTROUTING -o enp0s20f0 -p tcp --tcp-flags ALL ACK,FIN -j CLASSIFY --set-class 1:10

# Classify some critical latency-oriented services as 1:10
-A POSTROUTING -o enp0s20f0 -p udp --dport domain -j CLASSIFY --set-class 1:10
-A POSTROUTING -o enp0s20f0 -p udp --dport ntp -j CLASSIFY --set-class 1:10

COMMIT

*nat

# Route SSH/git connections to the git domain
-A PREROUTING -i enp0s20f0 -p tcp -m tcp --dport ssh -j DNAT --to 10.0.2.5
-A PREROUTING -i enp0s20f0 -p tcp -m tcp --dport git -j DNAT --to 10.0.2.5

# Install a NAT on enp0s20f0
-A POSTROUTING -o enp0s20f0 -j MASQUERADE

COMMIT

*filter

# Allows all loopback (lo0) traffic and drop all traffic to 127/8 that doesn't use lo0
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -d 127.0.0.0/8 -j REJECT

# Accepts all established inbound connections from the outside
-A INPUT -i enp0s20f0 -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i br0 -m state --state ESTABLISHED,RELATED -j ACCEPT

# Forwards all established inbound connections through the NAT
# Forwards all and any outbound connections through the NAT
-A FORWARD -i enp0s20f0 -o br0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i br0 -o enp0s20f0 -j ACCEPT

# Allows all outbound traffic
-A OUTPUT -j ACCEPT

# Allows DNS, DHCP, and NTP connections from the inside
-A INPUT -i br0 -p udp --dport 53 -j ACCEPT
-A INPUT -i br0 -p udp --dport 67 -j ACCEPT
-A INPUT -i br0 -p udp --dport 123 -j ACCEPT

# Open 68 on the outside so we can DHCP with the modem
-A INPUT -i enp0s20f0 -p udp --dport 68 -j ACCEPT

# Allows SSH connections from the inside
-A INPUT -i br0 -p tcp -m state --state NEW --dport ssh -j ACCEPT

# Forward SSH/git connections to the git domain
-A FORWARD -i enp0s20f0 -p tcp -d 10.0.2.5 -m state --state NEW --dport ssh -j ACCEPT
-A FORWARD -i enp0s20f0 -p tcp -d 10.0.2.5 -m state --state NEW --dport git -j ACCEPT

# Allows DNS connections from the inside
-A INPUT -i br0 -p tcp -m state --state NEW --dport 53 -j ACCEPT

# Allows SaltStack connections from the inside
-A INPUT -i br0 -p tcp -m state --state NEW --dport 4505 -j ACCEPT
-A INPUT -i br0 -p tcp -m state --state NEW --dport 4506 -j ACCEPT

# Allows iperf connections from the inside
-A INPUT -i br0 -p tcp -m state --state NEW --dport 5001 -j ACCEPT

# Allows spice connections from the inside
-A INPUT -i br0 -p tcp -m state --state NEW --dport 5900 -j ACCEPT

# Allow ICMP pings on any interface
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# Reject all other inbound - default deny unless explicitly allowed policy:
-A INPUT -j DROP
-A FORWARD -j DROP

COMMIT
